--- a/src/components/searchbar/searchbar.css
+++ b/src/components/searchbar/searchbar.css
@@ -2,7 +2,8 @@
     /* border: 2px solid black; */
     border-radius: 20px;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     width: 60%;
     text-align: center;
     margin-left: 20%;
